--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -37,6 +37,8 @@ a {
     padding: 40px;
     min-width: 500px;
     width: auto;
+    background-color: #FFF3F3;
+    border-radius: 3px;
 
 }
 
@@ -57,6 +59,14 @@ a {
 
 .signup-login-input-container input {
     padding: 10px;
+    background-color: #FFF3F3;
+    border-radius: 3px;
+    border: 1px solid gray;
+}
+
+.signup-login-input-container input:focus {
+    outline: none;
+    border: 1px solid var(--color-red);
 }
 
 .button-container {
