--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -30,7 +30,7 @@ a {
 
 .page-container {
     max-width: 900px;
-    margin: 0 auto;
+    margin: 100px auto;
 }
 
 .modal-container {
@@ -91,6 +91,7 @@ a {
     position: absolute;
     border: 1px solid gray;
     background-color: #FFF3F3;
+    z-index: 999;
 }
 
 .autocomplete-result {
@@ -106,4 +107,41 @@ a {
 .autocomplete-suggestion-address {
     color: gray;
     font-size: 12px;
+}
+
+/* Workshop display */
+.workshops-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+
+.workshop-card {
+    background-color: #f0f0f0;
+    padding: 20px;
+}
+
+.image-container {
+    width: 100%;
+    /* height: 0; */
+    padding-bottom: 100%;
+    /* Maintain a square aspect ratio (adjust as needed) */
+    position: relative;
+    overflow: hidden;
+}
+
+.workshop-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.workshop-link {
+    color: inherit;
+    /* Set the link color to inherit from the parent */
+    text-decoration: none;
+    /* Remove underline */
 }
