--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -14,6 +14,14 @@
   margin: 20px auto;
 }
 
+.navbar li {
+  min-width: 200px;
+}
+
+.profile-button-icon {
+  text-align: end;
+}
+
 .navbar-button>button {
   border: none;
   border: 1px solid var(--color-blue);
@@ -33,4 +41,5 @@
   color: var(--color-red);
   font-family: var(--font-lobster);
   font-size: 60px;
+  margin: 0 auto;
 }
