--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -5,6 +5,7 @@
     align-items: center;
     text-align: center;
     margin-top: 150px;
+    /* border: 2px solid var(--color-red); */
 }
 
 .search-heading-container h4 {
