--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -88,7 +88,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    width: 200px;
+    width: 300px;
     border: 1px solid gray;
 
 }
@@ -104,10 +104,11 @@ a {
     border: 1px solid gray;
     background-color: #FFF3F3;
     z-index: 999;
-    width: 400px;
+    width: 300px;
     /* height: 100px; */
     text-align: start;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow-x: hidden;
 }
 
 .autocomplete-result {
