create vote working

--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -44,3 +44,13 @@
 .highlighted-thumbs-up-icon path[fill="gray"] {
     fill: green;
 }
+
+.upvote-icon,
+.downvote-icon {
+    cursor: pointer;
+}
+
+.highlighted-thumbs-up-icon,
+.highlighted-thumbs-down-icon {
+    cursor: pointer;
+}
