--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -17,13 +17,29 @@
     border-bottom: 1px solid var(--color-blue);
 }
 
+.reviews-section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
 .reviews-section-title {
     margin: 0 auto;
     width: fit-content;
     font-family: var(--font-oswald);
     font-size: 40px;
     font-weight: 300;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+}
+
+.add-review-button {
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: var(--font-lato);
+    max-width: 300px;
+    border: 1px solid black;
 }
 
 .review-container {
