--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -7,6 +7,12 @@
     margin-bottom: 30px;
 }
 
+.workshop-info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .workshop-details-container h2 {
     font-family: var(--font-oswald);
     font-size: 50px;
@@ -17,6 +23,7 @@
     border-bottom: 1px solid var(--color-blue);
 }
 
+/* Reviews */
 .reviews-section-container {
     display: flex;
     flex-direction: column;
@@ -42,12 +49,65 @@
     border: 1px solid black;
 }
 
+.user-review-container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .review-container {
     margin: 10px 0;
 }
 
-/* Votes */
+.review-actions-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+
+.dropdown-button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid var(--color-blue);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.dropdown-menu button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+/* Ratings */
+.review-average-ratings-container {
+    display: flex;
+    gap: 12px;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+.review-ratings-container {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.rating-container {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+/* Votes */
 .votes-container {
     display: flex;
     align-items: center;
