--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1000px;
+  min-width: 1100px;
   margin: 20px auto;
 }
 
@@ -26,6 +26,21 @@
   text-align: end;
 }
 
+.profile-button {
+  background-color: transparent;
+  border: 1px solid var(--color-red);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.end-align {
+
+  text-align: end;
+}
+
 .navbar-button>button {
   border: none;
   border: 1px solid var(--color-blue);
@@ -34,6 +49,7 @@
   padding: 10px 30px;
   border-radius: 3px;
   cursor: pointer;
+
 }
 
 .inverted-button>button {
@@ -46,4 +62,39 @@
   font-family: var(--font-lobster);
   font-size: 60px;
   margin: 0 auto;
+}
+
+@media (max-width: 1100px) {
+  .navbar {
+    min-width: 800px;
+  }
+
+  .autocomplete-input {
+    width: 200px;
+    padding: 10px 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+  }
+
+  .navbar-logo {
+    order: 1;
+  }
+
+  .navbar-search {
+    order: 2;
+    margin-top: 20px;
+  }
+
+  .autocomplete-input {
+    margin: 0 auto;
+  }
+
 }
