create workshop errors

--- a/react-app/src/components/Workshops/CreateWorkshop/CreateWorkshop.css
+++ b/react-app/src/components/Workshops/CreateWorkshop/CreateWorkshop.css
@@ -54,3 +54,8 @@ input[type="file"] {
 .add-button path {
     fill: var(--color-red);
 }
+
+.error-message {
+    color: red;
+    margin-top: 8px;
+}
