--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,7 +1,3 @@
-.profile-dropdown {
-  position: absolute;
-}
-
 .hidden {
   display: none;
 }
@@ -14,7 +10,7 @@
   margin: 20px auto;
 }
 
-.navbar li {
+.navbar>li {
   min-width: 300px;
 }
 
@@ -24,16 +20,6 @@
 
 .profile-button-icon {
   text-align: end;
-}
-
-.profile-button {
-  background-color: transparent;
-  border: 1px solid var(--color-red);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #f5f5f5;
-  cursor: pointer;
 }
 
 .end-align {
@@ -62,6 +48,52 @@
   font-family: var(--font-lobster);
   font-size: 60px;
   margin: 0 auto;
+}
+
+/* Profile dropdown */
+
+.dropdown-container {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.profile-button {
+  background-color: transparent;
+  border: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-red);
+  cursor: pointer;
+}
+
+.user-initials {
+  color: white;
+  font-weight: 500;
+}
+
+.profile-dropdown {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: white;
+  width: auto;
+  top: 50px;
+  right: 0;
+  padding: 10px;
+}
+
+.profile-dropdown li {
+  width: 100%;
+}
+
+.logout-button {
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  color: var(--color-blue);
+  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
