--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -7,10 +7,24 @@
     margin-bottom: 30px;
 }
 
+.workshop-details-image-container {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+}
+
+.workshop-details-image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Crop the image to fit the container */
+}
+
 .workshop-info-container {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    position: relative;
 }
 
 .workshop-details-container h2 {
@@ -47,29 +61,47 @@
     font-family: var(--font-lato);
     max-width: 300px;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 .user-review-container {
     display: flex;
     justify-content: space-between;
+    flex-grow: 1;
+}
+
+.review {
+    display: flex;
+    flex-grow: 1;
+    /* width: 100%; */
+    justify-content: space-between;
+}
+
+.user-review-container:hover {
+    background-color: #FFE5E5;
 }
 
 .review-container {
     margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.review-wrapper {
+    padding: 10px;
 }
 
 .review-actions-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 5px;
+    margin: 0 auto;
 }
-
 
 .dropdown-button {
     border: none;
     background-color: transparent;
     cursor: pointer;
-    margin-right: 10px;
+    /* margin-right: 10px; */
 }
 
 .dropdown-menu {
@@ -79,6 +111,9 @@
     border: 1px solid var(--color-blue);
     padding: 10px;
     border-radius: 5px;
+    background-color: white;
+    position: absolute;
+    width: fit-content;
 }
 
 .dropdown-menu button {
@@ -128,5 +163,15 @@
 
 .highlighted-thumbs-up-icon,
 .highlighted-thumbs-down-icon {
+    cursor: pointer;
+}
+
+
+/* .admin-dropdown-container {
+    position: absolute;
+    right: 50%;
+} */
+
+.admin-info-button {
     cursor: pointer;
 }
