edit workshop route works

--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -54,6 +54,11 @@
     margin-bottom: 10px;
 }
 
+.add-review-button-container {
+    display: flex;
+    margin-bottom: 10px;
+}
+
 .add-review-button {
     background-color: transparent;
     padding: 10px;
@@ -62,6 +67,7 @@
     max-width: 300px;
     border: 1px solid black;
     cursor: pointer;
+    margin: 0 auto;
 }
 
 .user-review-container {
