--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -18,3 +18,56 @@
     padding: 10px 20px;
     min-width: 400px;
 }
+
+.workshop-card-info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+}
+
+.workshops-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+
+.workshop-card {
+    background-color: #FFE5E5;
+    padding: 20px;
+    border: .25px solid var(--color-red);
+    height: max-content;
+}
+
+.image-container {
+    width: 100%;
+    /* height: 0; */
+    padding-bottom: 100%;
+    /* Maintain a square aspect ratio (adjust as needed) */
+    position: relative;
+    overflow: hidden;
+}
+
+.workshop-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.workshop-link {
+    color: inherit;
+    /* Set the link color to inherit from the parent */
+    text-decoration: none;
+    /* Remove underline */
+}
+
+@media (max-width: 768px) {
+    .workshops-grid {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 20px;
+        gap: 40px
+    }
+}
