--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -130,3 +130,12 @@ a {
     color: gray;
     font-size: 12px;
 }
+
+.arrow-button {
+    border: none;
+    background-color: transparent;
+}
+
+.arrow-button svg path {
+    fill: var(--color-blue);
+}
