--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -106,11 +106,12 @@
 .review-images-container {
     display: flex;
     gap: 20px;
+    padding: 10px 0;
 }
 
 .review-image-container {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
 }
 
 .dropdown-button {
