--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 #modal-background {
@@ -22,5 +23,4 @@
   position: absolute;
   background-color: white;
   border-radius: 5px;
-
 }
