--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -131,6 +131,8 @@ a {
     font-size: 12px;
 }
 
+/* Alice carousel */
+
 .arrow-button {
     border: none;
     background-color: transparent;
@@ -139,4 +141,8 @@ a {
 
 .arrow-button svg path {
     fill: var(--color-blue);
+}
+
+.alice-carousel__dots {
+    display: none !important;
 }
