--- a/react-app/src/components/Reviews/AddReview/AddReview.css
+++ b/react-app/src/components/Reviews/AddReview/AddReview.css
@@ -56,17 +56,21 @@
 }
 
 /* Stars */
-/* .ratings-container {
-    margin: 0 auto;
-} */
 
-.rating-container {
+.add-rating-container {
     display: flex;
+    flex-direction: column;
+}
+
+.rating-input {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
-.rating-container h5 {
-    /* width: 120px; */
+.rating-error {
+    font-size: 12px;
+    color: red;
 }
 
 .star {
