--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -8,10 +8,22 @@
     /* border: 2px solid var(--color-red); */
 }
 
+.nearby-workshop-input-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
 .search-heading-container h4 {
     font-family: var(--font-oswald);
     font-weight: 300;
     font-size: 50px;
+}
+
+.autocomplete-input-wrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 .nearby-autocomplete-input {
@@ -83,5 +95,9 @@
         grid-template-columns: repeat(1, 1fr);
         padding: 0 20px;
         gap: 40px
+    }
+
+    .nearby-workshop-input-container {
+        flex-direction: column;
     }
 }
