--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -31,6 +31,13 @@
     min-width: 400px;
 }
 
+
+#number-dropdown {
+    padding: 10px;
+    border: 1px solid gray;
+    background-color: transparent;
+}
+
 .workshop-card-info-container {
     display: flex;
     flex-direction: column;
