--- a/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
+++ b/react-app/src/components/Workshops/WorkshopDetails/WorkshopDetails.css
@@ -1,6 +1,8 @@
 .workshop-details-container {
     display: flex;
     flex-direction: row;
+    flex: 1;
+    gap: 40px;
     align-items: center;
     justify-content: space-between;
     text-align: center;
@@ -10,14 +12,7 @@
 .workshop-details-image-container {
     width: 400px;
     height: 400px;
-    object-fit: cover;
-}
-
-.workshop-details-image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* Crop the image to fit the container */
+    /* object-fit: cover; */
 }
 
 .workshop-info-container {
