--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -156,6 +156,10 @@ a {
     display: none !important;
 }
 
+.alice-carousel__stage-item {
+    width: 400px !important;
+}
+
 .image-modal {
     width: 400px;
     height: 400px;
@@ -182,11 +186,6 @@ a {
 
     .results-container {
         width: 300px;
-    }
-
-    .workshop-details-container {
-        flex-direction: column !important;
-        flex: 1;
     }
 
     .workshop-details-image-container {
